<resources>
    <string name="app_name">myCommuter</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="login_title">Commute stylishly></string>
    <string name="username">UserName</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="logo">LOGO</string>
    <string name="access_token">access_token</string>
    <string name="emailpref">emailpref</string>
    <string name="passpref">emailpref</string>
    <string name="remember_me">Remember me</string>
    <string name="cardslidin">card slide in</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_access_token">pk.eyJ1IjoiaWFua3VtdSIsImEiOiJjazlsYm94am8xYXJ0M2txNnNtdWJldjhpIn0.5R5ZniWxnkTUYkztu7iAYQ</string>
    <string name="notify_permission_required">To be able to use map, you need to allow the application to access to device location</string>
    <string name="permission_explanation">Please grant permission to the application to access device location</string>
    <string name="simulate_route">Simulate Route</string>
    <string name="new_user_register_now">New User?Register Now</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="email">example@gmail.com</string>
    <string name="top_icon">top icon</string>
    <string name="already_have_an_account">Already Have an Account?</string>
</resources>
