<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
  >

    <data>
        <variable
            name="MainActivityViewModel"
            type="com.example.mycommuter.viewmodels.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <View
            android:id="@+id/topView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topView" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_person"
            android:contentDescription="@string/top_icon" />

        <TextView
            android:id="@+id/topText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:text="Don't have an account?"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/topView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regUsernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@android:color/transparent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            >
        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"

            app:addTextChangedListener="@{MainActivityViewModel.getUsernameWatcher}"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@android:color/transparent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regUsernameEdit"
            >
        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"

            app:addTextChangedListener="@{MainActivityViewModel.getEmailTextWatcher}"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email_address"
            android:drawablePadding="16dp"
            android:ems="10"

            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regUsernameEdit"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            app:passwordToggleEnabled="true"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@android:color/transparent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regEmailEdit"
            >
        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"

            app:addTextChangedListener="@{MainActivityViewModel.getPasswordWatcher}"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:drawablePadding="16dp"
            android:ems="10"

            android:inputType="textPassword"
            android:padding="16dp"

            />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@android:color/transparent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regPasswordEdit"
            >
        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"

            app:addTextChangedListener="@{MainActivityViewModel.getConfirmPasswordwatcher}"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/confirm_password"
            android:drawablePadding="16dp"
            android:ems="10"

            android:inputType="textPassword"
            android:padding="16dp"

            />
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/btnsignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_bg"
            android:text="Create Account"
            android:textColor="@android:color/white"
            android:textSize="18sp"

            android:onClick="@{MainActivityViewModel::onSignupClick}"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
        <TextView
            android:id="@+id/gotologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:onClick="@{MainActivityViewModel::launchLogin}"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnsignup"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>