<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <data>

        <variable
            name="LoginViewModel"
            type="com.example.mycommuter.viewmodels.LoginActivityModelView" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">

        <LinearLayout
            android:id="@+id/loginlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:orientation="vertical"
            tools:context=".LoginActivity">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/favicon" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/greatvibes_regular"
                android:text="@string/login_title"
                android:textColor="#fff"
                android:textSize="45sp" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/lato_lightitalic"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#fff"
                android:theme="@style/MyEditTextTheme"

                app:addTextChangedListener="@{LoginViewModel.getEmailTextWatcher}" />


            <EditText
                android:id="@+id/loginpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/lato_lightitalic"
                android:hint="@string/password"
                app:errorEnabled="true"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#fff"
                android:theme="@style/MyEditTextTheme"
                app:addTextChangedListener="@{LoginViewModel.getPasswordWatcher}" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot password?"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:onClick="@{LoginViewModel::launchPasswordReset}"
                    android:text="Reset"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


            </LinearLayout>

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_bg"

                android:fontFamily="@font/lato_lightitalic"

                android:onClick="@{LoginViewModel::onLoginClick}"
                android:padding="10dp"
                android:text="Login In"

                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account?"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:onClick="@{LoginViewModel::launchRegister}"
                    android:text="Create Account"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>